# chrome_history_fetcher

./: README.md  chrome_history_fetcher.py  pyproject.toml  visualize_history.py
utils/: constants.py
