[tool.poetry]
name = "chrome-history-fetcher"
version = "0.1.0"
description = "Chrome閲覧履歴を取得・分析するためのツール"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
